# mlops

feddit-anaiyzer/: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  ruff.toml
feddit-anaiyzer/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
feddit-anaiyzer/.github/workflows/: post-release.yml  pre-release.yml  qa-checks.yml
feddit-anaiyzer/deployment/: Dockerfile  docker-compose.yml
feddit-anaiyzer/docs/: Makefile  make.bat
feddit-anaiyzer/docs/source/: conf.py  index.rst
feddit-anaiyzer/feddit-api/: README.md  docker-compose.yml
feddit-anaiyzer/feddit_analyzer/: __init__.py  __main__.py
feddit-anaiyzer/feddit_analyzer/api/: __init__.py  _app.py  _core.py  _schemas.py
feddit-anaiyzer/feddit_analyzer/feddit_client/: __init__.py  _client.py  errors.py  schemas.py
feddit-anaiyzer/feddit_analyzer/scripts/: __init__.py  _serve.py  _wait_api.py
feddit-anaiyzer/feddit_analyzer/sentiment_analysis/: __init__.py  _analyzer.py  errors.py  schemas.py  sentiment.py
feddit-anaiyzer/tests/: __init__.py  conftest.py
feddit-anaiyzer/tests/compose/: Dockerfile  docker-compose.yml
feddit-anaiyzer/tests/e2e/: test_api.py
feddit-anaiyzer/tests/integration/: conftest.py  test_analyzer.py  test_client.py
feddit-anaiyzer/tests/unit/: conftest.py  test_analyzer.py  test_api_core.py  test_client.py
